<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CommunityPayActivity" >

    <include layout="@layout/top_title"/>

<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/community_pay_goodsmanage"
                android:textColor="#000000" />

            <ListView
                android:id="@+id/listViewGoodsManage"
                android:layout_width="fill_parent"
                android:layout_height="127dp" >

            </ListView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/idNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/community_pay_electric"
                android:textColor="#000000" />

            <ListView
                android:id="@+id/listViewElectric"
                android:layout_width="fill_parent"
                android:layout_height="127dp" >

            </ListView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/itemAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/community_pay_water"
                android:textColor="#000000" />

            <ListView
                android:id="@+id/listViewWater"
                android:layout_width="fill_parent"
                android:layout_height="127dp" >

            </ListView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/community_pay_phone"
                android:textColor="#000000" />

            <ListView
                android:id="@+id/listViewPhone"
                android:layout_width="fill_parent"
                android:layout_height="127dp" >

            </ListView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/community_pay_totalmoney"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textViewTotalMoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="#000000" />

        </LinearLayout>

    </LinearLayout>
  </ScrollView>

</LinearLayout>